--- a/src/styles/utils.module.scss
+++ b/src/styles/utils.module.scss
@@ -244,6 +244,10 @@
   margin: -30px auto 30px;
   max-width: 800px;
 }
+.mdRow {
+  max-width: 1000px;
+  margin: auto;
+}
 .SmRow {
   max-width: 900px;
   margin: auto;
