--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -306,6 +306,7 @@ input[type="image" i] {
   height: 200px;
   margin: 0!important;
  padding: 10px!important;
+ object-fit: cover;
 }
 
 .selected {
@@ -486,17 +487,11 @@ button.btn.btn-primary:hover {
     width: 100%;
     height: auto;
     margin: 0!important;
-   padding: 5px!important;
+    padding: 5px!important;
   }
   .row .padding10px {
     padding-left: 5px;
     padding-right: 5px;
-  }
-  input[type="image" i] {
-    width: 100%;
-    height: auto;
-    margin: 0!important;
-   padding: 5px!important;
   }
 }
 @media (max-width:767px ) {
