--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
-$primaryColor: #007D34;
+// $primaryColor: #007D34;
+$primaryColor: #0C7952;
 $secondaryColor:  #2db44b;
 $accent: #C8E6C9;
 $link: #007D34;
@@ -11,6 +12,8 @@ $info: #2196F3;
 $lightGray: #757575; 
 $gray: #4C4D4F;
 $darkGreen: #007551;
+$creamBackground: #E0D9CC;
+$paleGrayBackground: #F3F1EC;
 // $primaryColor: #009688;
 // $secondaryColor:  #4CAF50;
 // $accent:  #B2DFDB;
