change the background color of footer

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -93,8 +93,8 @@
 }
 
 .footerContainer {
-  background-color: $secondaryColor;
-  color: #fff;
+  background-color: $creamBackground;
+  color: #000;
   border-top: 1px solid #ccc;
   padding: 10px 0;
   
