Change the button text format

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,6 +31,7 @@ img {
 
 .page-section .btn {
   font-size: 15px;
+  // text-transform: capitalize!important;
 }
 .btn.btn-danger {
   background: $danger;
