--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -342,7 +342,7 @@
     z-index: 3; // This will ensure the innerContainer and its children are above the overlay
     padding: 10px;
     h1 {
-      color: white;
+      color: #333;
       font-size: 1.5em;
       @media (max-width:767px) {
         font-size: 1.1em;
@@ -350,7 +350,7 @@
     }
     p{
       margin: 10px 0 0;
-      color: white;
+      color: #333;
     }
     a{
       cursor: pointer;
