delete banner in home page

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -108,7 +108,7 @@ nav.navbar.navbar-expand-lg{
     margin: 20px;
     font-weight: 500;
     padding: 0;
-    margin: 20px;
+    margin: 10px 20px;
     padding-bottom: 10px;
     font-size: 1.1em;
   }
@@ -129,6 +129,10 @@ nav.navbar.navbar-expand-lg{
   .navbar-collapse {
     flex-grow: inherit;
   }
+  button.navbar-toggler{
+    padding: 5px;
+    font-size: 1em;
+  }
   .nav-dropdown {
     button {
       background: none;
@@ -137,7 +141,7 @@ nav.navbar.navbar-expand-lg{
       text-transform: capitalize;
       border-bottom: 2px solid transparent;
       padding: 0 !important;
-      margin: 20px;
+      margin: 10px 20px;
       border-radius: 0;
       color: #000;
     }
