--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'utils';
 
 .main {
   display: flex;
@@ -294,6 +295,7 @@
   padding: 0px 20px;
   max-width: 1120px;
   margin: auto;
+  margin-top: 50px;
   .aboutUsContainer {
     padding-bottom: 20px;
     margin: auto;
