change warning button style

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,14 +6,18 @@ $link: #007D34;
 $greyBackgroud: #F5F5F5;
 $greenBackgroud: #e8f3e9;
 $success: #4CAF50;
-$warning: #FFC107;
+$warning: #5e397b;
 $danger: #FF5722;
 $info: #2196F3;
 $lightGray: #757575; 
+$darkPurple: #482a5f;
 $gray: #4C4D4F;
 $darkGreen: #007551;
 $creamBackground: #E0D9CC;
 $paleGrayBackground: #F3F1EC;
+$deepDark: #2F4858;
+$deepDarkHover: #273b47;
+
 // $primaryColor: #009688;
 // $secondaryColor:  #4CAF50;
 // $accent:  #B2DFDB;
