show business name in group leader page for admin

--- a/src/styles/page.module.scss
+++ b/src/styles/page.module.scss
@@ -646,6 +646,11 @@
   }
 }
 
+.businessTitle {
+  padding-bottom: 20px;
+  font-size: 20px;
+}
+
 
 @media only screen and (max-width: 767px) {
   .userTableAction {
